--- a/web/view/store/storeAdd.html
+++ b/web/view/store/storeAdd.html
@@ -5,6 +5,13 @@
     \{include file="../common/resource.html"\}
     <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
     </script>
+    <!-- InputMask -->
+    <script src="../plugins/input-mask/jquery.inputmask.js"></script>
+    <script>
+    $(function() {
+        $("[data-mask]").inputmask();
+    });
+    </script>
 </head>
 
 <body class="hold-transition skin-yellow sidebar-mini">
@@ -45,7 +52,7 @@
                                     <div id="storePhoneDiv" class="form-group">
                                         <label for="storePhone" class="col-sm-2 control-label">聯絡電話</label>
                                         <div class="col-sm-3">
-                                            <input id="storePhone" name="storePhone" class="form-control" placeholder="輸入聯絡電話">
+                                            <input id="storePhone" name="storePhone" class="form-control" placeholder="輸入聯絡電話" data-inputmask='"mask": "(99) 999-9999"' data-mask>
                                         </div>
                                         <label for="businessHours" class="col-sm-2 control-label">營業時間</label>
                                         <div class="col-sm-4">
