user: Almost Fishish user part
TODO:
1. user transaction and detail

--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -53,6 +53,19 @@
 
                                     </div>
 
+                                    <!--birthday-->
+                                    <div id="birthdayDiv" class="form-group">
+                                        <label for="gender" class="col-sm-2 control-label">性別</label>
+                                        <div class="col-sm-10">
+                                            <div class="input-group">
+                                                <div class="input-group-addon">
+                                                    <i class="fa fa-calendar"></i>
+                                                </div>
+                                                <input type="text" class="form-control" data-inputmask="'alias': 'dd/mm/yyyy'" data-mask>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                     <!--account-->
                                     <div id="accountNameDiv" class="form-group">
                                         <label for="account" class="col-sm-2 control-label">帳號</label>
