--- a/web/view/user/userDetail.html
+++ b/web/view/user/userDetail.html
@@ -27,7 +27,7 @@
                          <ul class="nav nav-tabs">
                           <li class="active"><a href="#">會員詳細資料</a></li>
                           <li><a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userDetailData.userId\}">會員購物資料</a></li>
-                          <li><a href="../controller/userController.php?action=userCourseRecordPrepare&\{$userDetailData.userId\}">會員課程資料</a></li>
+                          <li><a href="../controller/userController.php?action=userCourseRecordPrepare&userId=\{$userDetailData.userId\}">會員課程資料</a></li>
                         </ul> 
 
                         <div class="box box-primary">
