--- a/web/view/user/userSearch.html
+++ b/web/view/user/userSearch.html
@@ -121,6 +121,9 @@
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>
 
+                                                <a href="../controller/userController.php?action=userShoppingAddPrepare&userId=\{$user.userId\}">
+                                                    <button class="btn btn-sm btn-success"><i class="glyphicon glyphicon-shopping-cart"></i></button>
+                                                </a>
 
                                                 <a href="#">
                                                     <button class="btn btn-sm btn-danger" onclick="deleteUser('\{$user.userId\}');"><i class="glyphicon glyphicon-remove"></i></button>
