--- a/web/view/education/educationAdd.html
+++ b/web/view/education/educationAdd.html
@@ -22,6 +22,8 @@
             readURL(this, '#educationImg1');
         });
 
+        $('input[name="imgCount"]').val(imgCount);
+
     });
 
     function readURL(input, id) {
@@ -36,21 +38,11 @@
         }
     }
 
-    function fieldValidation(field) {
-        if ($.trim($(field).val()) == '') {
-            $(field + 'Div').addClass('has-error');
-            $(field + 'Div').val('');
-            return false;
-        } else {
-            $(field + 'Div').removeClass('has-error');
-        }
-        return true;
-    }
 
-    function addFrameImg(i) {
+    function addEducationImg(i) {
         str = '<div id = "image' + i + '"><div class = "form-inline" style="display:inline-block;">';
         str += '<input type="file" id="educationImage' + i + '" name="educationImage' + i + '" data-input="false" accept="image/*">&nbsp';
-        str += '<a class="btn btn-sm btn-danger" onclick="deleteFrameImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
+        str += '<a class="btn btn-sm btn-danger" onclick="deleteEducationImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
         str += '</div>';
         str += '<img id="educationImg' + i + '" class="img-thumbnail" style="display:none"><br></div>'
 
@@ -68,12 +60,12 @@
             readURL(this, "#educationImg" + i);
         });
 
+        $('input[name="imgCount"]').val(imgCount);
     }
 
-    function deleteFrameImg(i) {
+    function deleteEducationImg(i) {
         $("#image" + i).remove();
     }
-
 
     //    
     $(function() {
@@ -105,7 +97,7 @@
                                 <h3 class="box-title">新增文章</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/educationController.php">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/educationController.php">
                                 <div class="box-body">
                                     <div id="educationTitleDiv" class="form-group">
                                         <label for="educationTitle" class="col-sm-2 control-label">標題</label>
@@ -123,20 +115,19 @@
                                     <div id="educationImageDiv" class="form-group">
                                         <label class="col-sm-2 control-label">文章圖片</label>
                                         <div class="col-sm-10">
-                                            <div id="image1">
-                                                <div class="form-inline" style="display:inline-block;">
-                                                    <input type="file" id="educationImage1" name="educationImage1" data-input="false" accept="image/*">
-                                                    <a class="btn btn-sm btn-primary" onclick="addFrameImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
-                                                </div>
-                                                <img id="educationImg1" class="img-thumbnail" style="display:none">
-                                                <br>
+                                            <div class="form-inline" style="display:inline-block;">
+                                                <input type="file" id="educationImage1" name="educationImage1" data-input="false" accept="image/*">
+                                                <a class="btn btn-sm btn-primary" onclick="addEducationImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
                                             </div>
+                                            <img id="educationImg1" class="img-thumbnail" style="display:none">
+                                            <br>
                                             <div id="addImgStart" name="addImgStart"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
                                     <a href="../controller/educationController.php?action=educationAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="imgCount">
                                     <input type="hidden" name="action" value="educationAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
