--- a/web/view/education/educationEdit.html
+++ b/web/view/education/educationEdit.html
@@ -8,6 +8,86 @@
     <!-- CK Editor -->
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
     <script>
+    var imgCount = 1;
+        $('input[name="imgCount"]').val(imgCount);
+        $(document).ready(function() {
+            $("#educationImage1").filestyle({
+                size: "nr",
+                input: false,
+                buttonText: "上傳圖片",
+                buttonName: "btn-info",
+                iconName: "glyphicon glyphicon-camera"
+            });
+
+            $("#educationImage1").change(function() {
+                readURL(this, '#educationImg1');
+            });
+        });
+
+        function readURL(input, id) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    $(id).attr('src', e.target.result);
+                    $(id).css('display', '');
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        function deleteImage(imageId){
+
+            BootstrapDialog.show({
+                title:'提醒',
+                message: '確定刪除該文章圖片嗎?',
+                buttons: [{
+                    label: '確定',
+                    cssClass: 'btn-danger',
+                    action: function(dialogItself){
+                        $.get('../controller/educationController.php?action=educationImageDelete&imageId=' + imageId, function(){});
+                        $("#existed_"+ imageId).remove();
+                        dialogItself.close();
+                        //deal with id 
+                    }
+                },{
+                    label: '取消',
+                    action: function(dialogItself){
+                        dialogItself.close();
+                    }
+                }]
+            });
+        }
+
+        function addEducationImg(i){
+            str = '<div id = "image' + i +'"><div class = "form-inline" style="display:inline-block;">';
+            str += '<input type="file" id="educationImage' + i + '" name="educationImage' + i +'" data-input="false" accept="image/*">&nbsp';
+            str += '<a class="btn btn-sm btn-danger" onclick="deleteEducationImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
+            str += '</div>';
+            str += '<img id="educationImg' + i +'" class="img-thumbnail" style="display:none"><br></div>'
+                                            
+            $("#addImgStart").after(str);
+
+            $("#educationImage"+ i).filestyle({
+                size: "nr",
+                input: false,
+                buttonText: "上傳圖片",
+                buttonName: "btn-info",
+                iconName: "glyphicon glyphicon-camera"
+            });
+           
+            $("#educationImage"+ i).change(function() {
+                readURL(this, "#educationImg"+ i);
+            });
+
+            $('input[name="imgCount"]').val(imgCount);
+        }
+
+        function deleteEducationImg(i){
+            $("#image"+i).remove();
+        }
+
+
     $(function() {
         // Replace the <textarea id="educationEditor"> with a CKEditor
         // instance, using default configuration.
@@ -37,7 +117,7 @@
                                 <h3 class="box-title">修改文章</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/educationController.php">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" ction="../controller/educationController.php">
                                 <div class="box-body">
                                     <div id="educationTitleDiv" class="form-group">
                                         <label for="educationTitle" class="col-sm-2 control-label">標題</label>
@@ -53,10 +133,29 @@
                                             </textarea>
                                         </div>
                                     </div>
+                                    <div id="educationImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">文章圖片</label>
+                                        <div class="col-sm-10">
+                                            <div class = "form-inline" style="display:inline-block;">
+                                                <input type="file" id="educationImage1" name="educationImage1" data-input="false" accept="image/*">
+                                                <a class="btn btn-sm btn-primary" onclick="addEducationImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
+                                            </div>
+                                            <img id="educationImg1" class="img-thumbnail" style="display:none"><br>
+                                            <div id="addImgStart" name="addImgStart"></div>
+                                            <br>
+                                            \{foreach from=$imageData item=image\}
+                                            <div id="existed_\{$image.imageId\}">
+                                                <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$image.imageId\}')"><i class="glyphicon glyphicon-remove"></i></a> 
+                                                <img id="\{$image.imageId\}" class="img-thumbnail" src="\{$image.path\}" alt="尚未上傳圖片">
+                                            </div>
+                                            \{/foreach\}
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
                                     <a href="../controller/educationController.php?action=educationList" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="educationEdit">
+                                    <input type="hidden" name="imgCount">
                                     <input type="hidden" name="educationId" value="\{$educationData.articleId\}">
                                     <button type="submit" class="btn btn-success">更新</button>
                                 </div>
