--- a/web/view/news/newsAdd.html
+++ b/web/view/news/newsAdd.html
@@ -3,8 +3,7 @@
 
 <head>
     \{include file="../common/resource.html"\}
-    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
-    </script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"></script>
     <!-- CK Editor -->
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
     <script>
@@ -22,6 +21,8 @@
         $("#newsImage1").change(function() {
             readURL(this, '#newsImg1');
         });
+
+        $('input[name="imgCount"]').val(imgCount);
 
     });
 
@@ -48,10 +49,10 @@
         return true;
     }
 
-    function addFrameImg(i) {
+    function addNewsImg(i) {
         str = '<div id = "image' + i + '"><div class = "form-inline" style="display:inline-block;">';
         str += '<input type="file" id="newsImage' + i + '" name="newsImage' + i + '" data-input="false" accept="image/*">&nbsp';
-        str += '<a class="btn btn-sm btn-danger" onclick="deleteFrameImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
+        str += '<a class="btn btn-sm btn-danger" onclick="deleteNewsImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
         str += '</div>';
         str += '<img id="newsImg' + i + '" class="img-thumbnail" style="display:none"><br></div>'
 
@@ -69,9 +70,11 @@
             readURL(this, "#newsImg" + i);
         });
 
+        $('input[name="imgCount"]').val(imgCount);
+
     }
 
-    function deleteFrameImg(i) {
+    function deleteNewsImg(i) {
         $("#image" + i).remove();
     }
 
@@ -104,7 +107,7 @@
                                 <h3 class="box-title">新增文章</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/newsController.php">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/newsController.php">
                                 <div class="box-body">
                                     <div id="newsTitleDiv" class="form-group">
                                         <label for="newsTitle" class="col-sm-2 control-label">標題</label>
@@ -119,23 +122,22 @@
                                             </textarea>
                                         </div>
                                     </div>
-                                </div>
-                                <div id="newsImageDiv" class="form-group">
-                                    <label class="col-sm-2 control-label">文章圖片</label>
-                                    <div class="col-sm-10">
-                                        <div id="image1">
+                                    <div id="newsImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">文章圖片</label>
+                                        <div class="col-sm-10">
                                             <div class="form-inline" style="display:inline-block;">
                                                 <input type="file" id="newsImage1" name="newsImage1" data-input="false" accept="image/*">
-                                                <a class="btn btn-sm btn-primary" onclick="addFrameImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
+                                                <a class="btn btn-sm btn-primary" onclick="addNewsImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
                                             </div>
                                             <img id="newsImg1" class="img-thumbnail" style="display:none">
                                             <br>
+                                            <div id="addImgStart" name="addImgStart"></div>
                                         </div>
-                                        <div id="addImgStart" name="addImgStart"></div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
                                     <a href="../controller/newsController.php?action=newsAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="imgCount">
                                     <input type="hidden" name="action" value="newsAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
