--- a/web/view/life/lifeAdd.html
+++ b/web/view/life/lifeAdd.html
@@ -3,8 +3,7 @@
 
 <head>
     \{include file="../common/resource.html"\}
-    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
-    </script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"></script>
     <!-- CK Editor -->
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
     <script>
@@ -22,6 +21,8 @@
         $("#lifeImage1").change(function() {
             readURL(this, '#lifeImg1');
         });
+
+        $('input[name="imgCount"]').val(imgCount);
 
     });
 
@@ -48,10 +49,10 @@
         return true;
     }
 
-    function addFrameImg(i) {
+    function addLifeImg(i) {
         str = '<div id = "image' + i + '"><div class = "form-inline" style="display:inline-block;">';
         str += '<input type="file" id="lifeImage' + i + '" name="lifeImage' + i + '" data-input="false" accept="image/*">&nbsp';
-        str += '<a class="btn btn-sm btn-danger" onclick="deleteFrameImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
+        str += '<a class="btn btn-sm btn-danger" onclick="deleteLifeImg(' + i + ')"><i class="glyphicon glyphicon-remove"></i></a>';
         str += '</div>';
         str += '<img id="lifeImg' + i + '" class="img-thumbnail" style="display:none"><br></div>'
 
@@ -68,10 +69,11 @@
         $("#lifeImage" + i).change(function() {
             readURL(this, "#lifeImg" + i);
         });
+        $('input[name="imgCount"]').val(imgCount);
 
     }
 
-    function deleteFrameImg(i) {
+    function deleteLifeImg(i) {
         $("#image" + i).remove();
     }
 
@@ -104,7 +106,7 @@
                                 <h3 class="box-title">新增文章</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/lifeController.php">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/lifeController.php">
                                 <div class="box-body">
                                     <div id="lifeTitleDiv" class="form-group">
                                         <label for="lifeTitle" class="col-sm-2 control-label">標題</label>
@@ -122,20 +124,19 @@
                                     <div id="lifeImageDiv" class="form-group">
                                         <label class="col-sm-2 control-label">文章圖片</label>
                                         <div class="col-sm-10">
-                                            <div id="image1">
-                                                <div class="form-inline" style="display:inline-block;">
-                                                    <input type="file" id="lifeImage1" name="lifeImage1" data-input="false" accept="image/*">
-                                                    <a class="btn btn-sm btn-primary" onclick="addFrameImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
-                                                </div>
-                                                <img id="lifeImg1" class="img-thumbnail" style="display:none">
-                                                <br>
+                                            <div class="form-inline" style="display:inline-block;">
+                                                <input type="file" id="lifeImage1" name="lifeImage1" data-input="false" accept="image/*">
+                                                <a class="btn btn-sm btn-primary" onclick="addLifeImg(++imgCount)"><i class="glyphicon glyphicon-plus"></i></a>
                                             </div>
+                                            <img id="lifeImg1" class="img-thumbnail" style="display:none">
+                                            <br>
                                             <div id="addImgStart" name="addImgStart"></div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
                                     <a href="../controller/lifeController.php?action=lifeAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="imgCount">
                                     <input type="hidden" name="action" value="lifeAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
